updated alignment issues petlist, ecom-category, ecom-subcategory, ecom-product pages

--- a/src/app/admin/pages/sub-category-management/sub-category-management.component.css
+++ b/src/app/admin/pages/sub-category-management/sub-category-management.component.css
@@ -1,1 +1,7 @@
-@import "../../../../assets/css/style.css"
+@import "../../../../assets/css/style.css";
+.doc-table .ui-table table {
+    width: 1600px !important;
+}
+:host::ng-deep .ui-table-wrapper{
+overflow-x: scroll;
+}
